internal/cmd/egctl/testdata/translate/out/from-gateway-api-to-xds.route.yaml
xds:
  default/eg:
    '@type': type.googleapis.com/envoy.admin.v3.RoutesConfigDump
    dynamicRouteConfigs:
    - routeConfig:
        '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
        ignorePortInHostMatching: true
        name: default/eg/http
        virtualHosts:
        - domains:
          - www.example.com
          metadata:
            filterMetadata:
              envoy-gateway:
                resources:
                - kind: Gateway
                  name: eg
                  namespace: default
                  sectionName: http
          name: default/eg/http/www_example_com
          routes:
          - match:
              prefix: /
            metadata:
              filterMetadata:
                envoy-gateway:
                  resources:
                  - kind: HTTPRoute
                    name: backend
                    namespace: default
            name: httproute/default/backend/rule/0/match/0/www_example_com
            route:
              cluster: httproute/default/backend/rule/0
              upgradeConfigs:
              - upgradeType: websocket
            typedPerFilterConfig:
              envoy.filters.http.lua/default/eg/http/0:
                '@type': type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                name: envoyextensionpolicy/default/lua-example/lua/0
    - routeConfig:
        '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
        ignorePortInHostMatching: true
        name: default/eg/grpc
        virtualHosts:
        - domains:
          - www.grpc-example.com
          metadata:
            filterMetadata:
              envoy-gateway:
                resources:
                - kind: Gateway
                  name: eg
                  namespace: default
                  sectionName: grpc
          name: default/eg/grpc/www_grpc-example_com
          routes:
          - match:
              path: /com.example.Things/DoThing
            metadata:
              filterMetadata:
                envoy-gateway:
                  resources:
                  - kind: GRPCRoute
                    name: backend
                    namespace: default
            name: grpcroute/default/backend/rule/0/match/0/www_grpc-example_com
            route:
              cluster: grpcroute/default/backend/rule/0
